--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:3.14.9'
 
+    // 이미지 로드 라이브러리
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // 스켈레톤 로딩
+    implementation 'com.github.AgnaldoNP:AGSkeletonLoading:1.2'
+
 }
