Fix layout abnormal behavior

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jul 10 19:03:37 KST 2021
-sdk.dir=C\:\\Users\\basaj\\AppData\\Local\\Android\\Sdk
+#Mon Jul 12 13:48:59 KST 2021
+sdk.dir=C\:\\Users\\james\\AppData\\Local\\Android\\Sdk
